Created organization service and handler
